--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
-    "pm2": "^5.1.2"
+    "pm2": "^5.1.2",
+    "typeorm": "^0.2.40"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
